@@ -4,6 +4,8 @@ import com.example.isejobsboard.model.GreetingMessage;
 import com.example.isejobsboard.repository.GreetingMessageRepository;
 import com.example.isejobsboard.security.SHA256;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.sql.*;
@@ -16,9 +18,10 @@ import com.example.isejobsboard.security.Authenticator;
 @RestController
 @RequestMapping("/api/v1")
 public class ApiController {
-    private static final Map<String, String> env = System.getenv();
+    private final String username = "root";
+    private final String password = "AX10kl2-s(6b";
+    private final String dbUrl = "jdbc:mysql://isejobsboard.petr.ie:3306/jobs_board";
 
-    /*
     private final GreetingMessageRepository greetingMessageRepository;
 
     @Autowired
@@ -37,46 +40,47 @@ public class ApiController {
             dbMessage = defaultMessage.getContent();
         } else {
             // Return the content of the first message found
-            dbMessage = messages.get(0).getContent();
+            dbMessage = messages.getFirst().getContent();
         }
         return Map.of("message", "Hello from Spring Boot Backend! and: " + dbMessage);
     }
-     */
 
     @PostMapping("/login")
-    public String login(@RequestBody UserLogin body) {
-        StringBuilder queryBuilder = new StringBuilder();
+    public ResponseEntity<Object> login(@RequestBody UserLogin body) {
 
-        queryBuilder.append("SELECT * FROM users WHERE email='");
-        queryBuilder.append(body.email);
-        queryBuilder.append("';");
+        // Use a PreparedStatement with a placeholder (?) to prevent SQL Injection !!!!
+        String query = "SELECT * FROM users WHERE email = ?";
 
         String dynamic_salt = body.email;
         String static_salt = "892225800";
         String hashedPassword = SHA256.hash(dynamic_salt + body.password + static_salt);
 
-        String query = queryBuilder.toString();
+        // Use try-with-resources for automatic closing of database connections
+        try (Connection userConnection = DriverManager.getConnection(dbUrl, username, password);
+             PreparedStatement userStatement = userConnection.prepareStatement(query)) {
 
-        try {
-            Connection userConnection = DriverManager.getConnection(
-                    "jdbc:mysql://isejobsboard.petr.ie:3306/jobs_board",
-                    env.get("dbUsername"),
-                    env.get("dbPassword")
-            );
+            // Safely set the email parameter
+            userStatement.setString(1, body.email);
 
-            Statement userStatement = userConnection.createStatement();
-            ResultSet userResultSet = userStatement.executeQuery(query);
+            // Remember a query can fail !
+            try (ResultSet userResultSet = userStatement.executeQuery()) {
 
-            while (userResultSet.next()) {
-                if (userResultSet.getString("email").equals(body.email) && hashedPassword.equals(userResultSet.getString("password"))) {
-                    return Authenticator.createToken(userResultSet.getInt("user_id"));
+                while (userResultSet.next()) {
+                    if (userResultSet.getString("email").equals(body.email) && hashedPassword.equals(userResultSet.getString("password"))) {
+
+                        String token = Authenticator.createToken(userResultSet.getInt("user_id"));
+                        // Correct way to return responses !!
+                        return ResponseEntity.ok(Map.of("token", token));
+
+                    }
                 }
+                return ResponseEntity.status(401).body(Map.of("error", "Invalid email or password"));
             }
 
-            return "404";
         } catch (SQLException e) {
             e.printStackTrace();
-            return "500";
+            return ResponseEntity.status(500).body(Map.of("error", "An internal server error occurred."));
+
         }
     }
     @PostMapping("add-company")
@@ -105,52 +109,48 @@ public class ApiController {
     }
 
     @PostMapping("/logout")
-    public int logout(@RequestBody UserLogout user) {
+    public ResponseEntity<Object> logout(@RequestBody UserLogout user) {
         String token = user.getToken();
 
         try {
             if (Authenticator.isTokenValid(token)) {
                 Authenticator.destroyToken(token);
-                return 200;
+                return ResponseEntity.ok(Map.of("message", "Logout successful"));
             } else {
-                return 401;
+                return ResponseEntity.status(401).body(Map.of("error", "Invalid or expired token"));
             }
         } catch (SQLException e) {
             e.printStackTrace();
-            return 500;
+            return ResponseEntity.status(500).body(Map.of("error", "An internal server error occurred during logout."));
         }
     }
 
     @PostMapping("/signup")
-    public int signup(@RequestBody UserSignup user) {
-        StringBuilder queryBuilder = new StringBuilder();
+    public ResponseEntity<Object> signup(@RequestBody UserSignup user) {
 
         String dynamic_salt = user.email;
         String static_salt = "892225800";
         String hashedPassword = SHA256.hash(dynamic_salt + user.password + static_salt);
 
-        queryBuilder.append("INSERT INTO users (email, password) VALUES ('");
-        queryBuilder.append(user.email);
-        queryBuilder.append("', '");
-        queryBuilder.append(hashedPassword);
-        queryBuilder.append("');");
+        // Use a PreparedStatement with placeholders (?) to prevent SQL Injection
+        String query = "INSERT INTO users (email, password) VALUES (?, ?)";
 
-        String query = queryBuilder.toString();
+        // Use try-with-resources for automatic resource management
+        try (Connection userConnection = DriverManager.getConnection(dbUrl, username, password);
+             PreparedStatement userStatement = userConnection.prepareStatement(query)) {
 
-        try {
-            Connection userConnection = DriverManager.getConnection(
-                    "jdbc:mysql://isejobsboard.petr.ie:3306/jobs_board",
-                    env.get("dbUsername"),
-                    env.get("dbPassword")
-            );
+            // Safely set the parameters
+            userStatement.setString(1, user.email);
+            userStatement.setString(2, hashedPassword);
 
-            Statement userStatement = userConnection.createStatement();
-            userStatement.executeUpdate(query);
+            userStatement.executeUpdate();
 
-            return 200;
+            // SUCCESS: User was created. Return 201 Created.
+            return ResponseEntity.status(201).body(Map.of("message", "User created successfully"));
+
         } catch (SQLException e) {
             e.printStackTrace();
-            return 500;
+            return ResponseEntity.status(500).body(Map.of("error", "An internal server error occurred during Signup."));
         }
     }
 }
